<resources>
    <string name="app_name">Demo</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="notice_terms_of_use">
        Thank you for enrolling in trainings with CodePlay Studio.\n
        \nThis app is developed for training purpose used in Android Development training conducted
        by CodePlay Studio, lisenced under the Apache License, Version 2.0 (the "License"); You may
        not use this app except in compliance with the License. You may obtain a copy of the License
        at\n\n\t\t\thttp://www.apache.org/licenses/LICENSE-2.0
        \n\nThe source code is provided "AS IS". Any expressed or implied warranties, including,
        but not limited to, the implied warranties of merchantability and fitness for a particular
        purpose are disclaimed. In no event shall the copyright holder be liable for any direct,
        indirect, incidental, special, exemplary, or consequential damages (Including, but not limited to,
        procurement of goods or services; loss of use, data, or profits; or business interruption)
        however caused and on any theory of liability, whether in contract, strict liability, or tort
        (Including negligence or otherwise) arising in any way out of the use of this source code,
        even if advised of the possibility of such damage.
        \n\nRedistribution and use in source and binary forms, with or without modification,
        are permitted provided that the above copyright notice and disclaimer are retained in the
        redistributions of source code or reproduced in the documentation and/or other materials provided
        with the redistributions in binary form.
    </string>
    <string name="copyright">Copyright &#169; 2017 CodePlay Studio. %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="widgets">Widgets (Views)</string>
    <string-array name="spinner_items">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
    </string-array>
    <string name="text_switcher">TextSwitcher</string>
    <string name="text_switcher_desc">A widget that animates label on screen.</string>
    <string name="text_switcher_caption">At CodePlay, we thrive on</string>
    <string-array name="text_switcher_texts">
        <item>Anything about Android</item>
        <item>Creativity</item>
        <item>Doing the Best</item>
        <item>Innovation</item>
        <item>Inspiring people</item>
        <item>Out-of-the-box Thinking</item>
        <item>Sharing of Knowledge</item>
        <item>Staying Focus</item>
        <item>Tackling Challenges</item>
    </string-array>
    <string name="text_selection">Custom Actions in Text Selection</string>
    <string name="text_selection_desc">Display text selection actions such as Cut, Copy, and Paste for selected text.</string>
    <string name="text_selection_long_desc">Starting from Android 6.0 (API 23),
        apps can display text selection actions such as Cut, Copy, Paste in a contextual floating toolbar.
        \n\nIn devices running Android 6.0 (API 23), the framework able to display the selection actions in either
        floating toolbar or action bar mode, while on devices running Android 5.1 (API 22) or lower, only the
        latter is supported.
        \n\n*Long click on any text to bring up the text selection actions.
    </string>
    <string name="layouts">Layouts (ViewGroups)</string>
    <string name="framelayout">FrameLayout</string>
    <string name="framelayout_short_desc">A layout designed to block out an area on the screen.</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="relativelayout_short_desc">A layout where the position of the childrens can be described in relation to each other or to the parent.</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="linearlayout_short_desc">A layout to display its children in a single order (horizontal or vertical).</string>
    <string name="scrollview">ScrollView</string>
    <string name="scrollview_short_desc">A layout that allows the view hierarchy placed within it to be scrolled when the hierarchy is beyond its own bound.</string>
    <string name="tablelayout">TableLayout</string>
    <string name="tablelayout_short_desc">A layout that arranges its childrens into rows and columns.</string>
    <string name="tabular_data">Tabular data</string>
    <string name="simple_form">Simple form</string>
    <string name="gridlayout">GridLayout (API 14)</string>
    <string name="gridlayout_short_desc">A layout that places its childrens in rectangular grid.</string>
    <string name="coordinatorlayout">CoordinatorLayout (API 21)</string>
    <string name="coordinatorlayout_short_desc">A layout that manages interactions between its children.</string>
    <string name="coordinator_article">Android is a mobile operating system (OS) currently developed by Google,
        based on the Linux kernel and designed primarily for touchscreen mobile devices
        such as smartphones and tablets.
        \n\nAndroid was initially authored by Android, Inc., which Google bought in 2005,[17]
        and unveiled it in 2007, along with the founding of the Open Handset Alliance –
        a consortium of hardware, software, and telecommunication companies devoted to
        advancing open standards for mobile devices.
        \n\nAndroid\'s source code is released by Google under open source licenses,
        although most Android devices ultimately ship with both open source and proprietary software,
        including required proprietary components for Google\'s services.
    </string>
    <string name="slidingdrawer">SlidingDrawer (Deprecated from API 17 onwards)</string>
    <string name="slidingdrawer_short_desc">A layout that hides content out of the screen.</string>
    <string name="bottom_sheets">Bottom Sheets (API 21)</string>
    <string name="bottom_sheets_short_desc">Bottom sheets slide up from the bottom of the screen to reveal more content.</string>
    <string name="bottom_sheets_desc_1">Bottom sheet is a Material component which added to the Android Support Library in v23.2.0. It slide up from the bottom of the screen to reveal more content.</string>
    <string name="bottom_sheets_desc_2">There are two types of bottom sheets:</string>
    <string name="bottom_sheets_desc_3">• Persistent bottom sheet (Views that come up from the bottom of the screen)</string>
    <string name="bottom_sheets_desc_4">• Modal bottom sheet (A dialog)</string>
    <string name="persistent_bottom_sheets">Persistent bottom sheet</string>
    <string name="persistent_bottom_sheets_desc_1">BottomSheetBehavior is applied to a child\'s layout_behavior xml attribute of CoordinatorLayout. The height of the visible part of the sheet can be set with xml attribute behavior_peekHeight or Java method setPeekHeight(int) when the sheet is collapsed.</string>
    <string name="persistent_bottom_sheets_desc_2">
        User may open/close the sheet with dragging/swiping gestures, or it can be controlled programmatically with setState(int) to one of the following 5 states:\n
        \n\t• STATE_COLLAPSED: The sheet is collapsed and only a visible part is showing if peek height has set (>1dp).
        \n\t• STATE_EXPANDED: The sheet is visible to its maximum height.
        \n\t• STATE_DRAGGING: The sheet is being dragged up or down.
        \n\t• STATE_SETTLING: The sheet is settling to a specific height (peek height, expanded height or 0) after a drag/swipe gesture.
        \n\t• STATE_HIDDEN: The sheet is no longer visible.
    </string>
    <string name="modal_bottom_sheet">Modal bottom sheet example</string>
    <string name="tablayout">Tab Layout</string>
    <string name="tablayout_desc_short">A horizontal layout to display tabs.</string>
    <string name="viewflipper">ViewFlipper</string>
    <string name="viewflipper_short_desc">A layout that animates between two or more views.</string>
    <string name="gridview">GridView</string>
    <string name="gridview_short_desc">A layout displays items in two-dimensional scrollable grid.</string>
    <string name="listview">ListView</string>
    <string name="listview_short_desc">A layout displays a list of scrollable items vertically.</string>
    <string name="stackview">StackView</string>
    <string name="stackview_short_desc">An AdapterView that displayes list of items in a stack of cards
        which can be swiped away towards the corner of the screen or navigate to the next by
        flipping these virtual cards.
    </string>
    <string name="recyclerview">RecyclerView (API 21)</string>
    <string name="recyclerview_short_desc">A more advanced and flexible ListView/GridView designed for displaying large data sets efficiently.</string>
    <string name="notifications">Notifications</string>
    <string name="toast">Toast</string>
    <string name="toast_msg">This is a Toast message</string>
    <string name="toast_desc">A simple, unobtrusive message in a small popup near the bottom of the screen,
        centered horizontally by default. Usually used in a response to an action or operation a user has
        performed and automatically disappear after a timeout.</string>
    <string name="snackbar">Snackbar (API 21)</string>
    <string name="snackbar_button">Snackbar</string>
    <string name="snackbar_msg">This is a Snackbar message</string>
    <string name="snackbar_desc">Provide brief feedback that contain very short text and a single text action at the bottom of the screen.</string>
    <string name="dialog">Dialog</string>
    <string name="dialog_desc">A dialog is a small window that prompts user to make a decision, selection, or enter additional information.
        Normally used for modal events that require users to take an action before they can proceed.</string>
    <string name="dialog_norm">Normal</string>
    <string name="dialog_list">List</string>
    <string name="pickerdialog">DatePickerDialog &amp; TimePickerDialog</string>
    <string name="pickerdialog_desc">A dialog with pre-defined UI that allows user to select a date or time.</string>
    <string name="datepickerdialog">DatePickerDialog</string>
    <string name="timepickerdialog">TimePickerDialog</string>
    <string name="notification">Notification</string>
    <string name="notification_desc">An user interface element that display outside an app to indicate an event has occurred which user can view and respond to it by dragging down the status bar to open the notification drawer.</string>
    <string name="notify">Notify</string>
    <string name="animations">Animations</string>
    <string name="flying_bird_demo">Flying Bird Demo</string>
    <string name="view_animation">View Animation</string>
    <string name="view_animation_desc">Demonstrate the usage of View animation and Drawable animation.</string>
    <string name="flipping">Content Flipping</string>
    <string name="property_animation">Property Animation</string>
    <string name="property_animation_desc">Demonstrate the usage of Property animation.</string>
    <string name="android_development">I am new to Android Development</string>
</resources>