<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 (C) CodePlay Studio. All rights reserved.
  ~
  ~ All source code within this app is licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. You may obtain a copy of the
  ~ License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ either express or implied. See the License for the specific language governing permissions
  ~ and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/views"
                    android:icon="@drawable/ic_widgets_black_24dp"
                    android:title="@string/widgets"/>
                <item
                    android:id="@+id/viewgroups"
                    android:icon="@drawable/ic_relativelayout_black_24dp"
                    android:title="@string/layouts"/>
            </group>
        </menu>
    </item>

    <!-- A dummy invisible menu item to uncheck all selection -->
    <item android:id="@+id/none"
          android:checkable="true"
          android:visible="false" />

</menu>